/*
The file is generated by a scaffold script
@author: Arkan M. Gerges<arkan.m.gerges@gmail.com>
*/


syntax = "proto3";
package cafm.project.lookup.equipment;
import "project/lookup/equipment/equipment_project_category.proto";
import "project/lookup/equipment/equipment_category.proto";
import "project/lookup/equipment/equipment_category_group.proto";
import "project/lookup/equipment/building.proto";
import "project/lookup/equipment/building_level.proto";
import "project/lookup/equipment/building_level_room.proto";
import "project/lookup/equipment/manufacturer.proto";
import "project/lookup/equipment/equipment_model.proto";
import "project/lookup/equipment/maintenance_procedure.proto";

message Equipment {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  string projectId = 4;
  EquipmentProjectCategory equipmentProjectCategory = 5;
  EquipmentCategory equipmentCategory = 6;
  EquipmentCategoryGroup equipmentCategoryGroup = 7;
  Building building = 8;
  BuildingLevel buildingLevel = 9;
  BuildingLevelRoom buildingLevelRoom = 10;
  Manufacturer manufacturer = 11;
  EquipmentModel equipmentModel = 12;
  repeated MaintenanceProcedure maintenanceProcedures = 13;
}
